# Openclassrooms_P10

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy_hf.sh  pyproject.toml
.github/workflows/: cd.yml  ci.yml
CLI/: evaluate_ragas.py  indexer.py  load_excel_to_db.py
datas/NBA_database/: interactions.db
datas/vector_db/: document_chunks.pkl  faiss_index.idx
evaluation/: evaluate_ragas.py
notebooks/: rapport.ipynb
src/livrable_p10/app/: main.py
src/livrable_p10/app/agents/: nba_agent.py
src/livrable_p10/app/database/: load_excel_to_db.py  schemas.py
src/livrable_p10/app/db/: create_db.py  database.py  models_db.py
src/livrable_p10/app/tools/rag/: HFChat.py  LLMChat.py  indexer.py  vector_store.py
src/livrable_p10/app/tools/rag/utils/: config.py  data_loader.py  vector_store.py
src/livrable_p10/app/tools/semantic/: vector_store.py
src/livrable_p10/app/tools/sql/: prompts.py  sql_pipeline.py  sql_tool.py
src/livrable_p10/app/ui/: chat_interface.py
src/livrable_p10/app/utils/: blacklist.txt  config.py  data_loader.py  document_reshape.py  prompts.py  schemas.py
src/livrable_p10/rag/: MistralChat.py  indexer.py
src/livrable_p10/rag/utils/: config.py  vector_store.py
tests/: test_agent.py
